<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="folder_cover">Folder cover image</string>
    <string name="album_art">…</string>
    <string name="menu">Menu</string>
    <string name="folder_subtitle_default">0 tracks</string>
    <string name="folder_subtitle">%1$d tracks</string>

    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>

    <string name="song_artist_album">%1$s • %2$s</string>
    <string name="shuffle_mode">Shuffle mode</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_play">Play</string>
    <string name="menu_play_random">Play in random order</string>

    <string name="settings_scanning">Scanning /storage/emulated/0/Music ...</string>
    <string name="settings_scanning_subtitle">This can take a bit longer</string>
    <string name="settings_scanning_progress">Scanning %1$d / %2$d files…</string>

    <string name="settings_scan_complete">Scan complete</string>
    <string name="settings_library_loaded">Library loaded</string>
    <string name="settings_library_not_loaded">Library not loaded</string>
    <string name="settings_library_status">Library status</string>
    <string name="settings_rescan_library">Rescan Music Library</string>

    <string name="menu_search">Search</string>
    <string name="search_hint">Search title, artist, or album</string>

    <string name="settings_open_log">Open scanning error log"</string>
    <string name="logviewer_no_log">No error log found.</string>
    <string name="logviewer_deleted">Log deleted.</string>
    <string name="logviewer_delete">Delete log</string>
    <string name="logviewer_share">Share log</string>

    <string name="settings_gallery_view_title">Gallery view for folders</string>
    <string name="settings_gallery_view_summary">Show folders as thumbnails instead of a list</string>
    <string name="settings_thumbnail_size">Thumbnail size</string>
    <string name="settings_select_resolution">Choose the resolution for folder thumbnails</string>

</resources>