<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="pref_gallery_view"
        android:title="@string/settings_gallery_view_title"
        android:summary="@string/settings_gallery_view_summary"
        app:layout="@layout/preference_switch_left" />

    <ListPreference
        android:key="pref_thumbnail_size"
        android:title="@string/settings_thumbnail_size"
        android:summary="@string/settings_select_resolution"
        android:entries="@array/thumb_size_labels"
        android:entryValues="@array/thumb_size_values"
        android:defaultValue="256"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
